--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 ul {
     list-style-type: none;
-    padding-top: 10px;
-    padding-left: 0px;
-    width: 100%;
+    padding: 0;
 }
 
 input {
     float: left;
-    vertical-align: baseline;
+    width: 75%;
+}
+
+label {
+    float: left;
+    width: 25%;
 }
