--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,13 @@ label {
 .container {
     border-radius: 5px;
     background-color: #f2f2f2;
+    height: 60%;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
 }
